# ChangeLog for dev-ruby/powerpack
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*powerpack-0.0.9 (24 Jan 2015)

  24 Jan 2015; Hans de Graaff <graaff@gentoo.org> +powerpack-0.0.9.ebuild,
  +metadata.xml:
  Initial import. Dependency for rubocop.
