@@ -1,1 +1,2 @@
 DIST powerpack-0.0.9.gem 13824 SHA256 6694e29fa8fd2613f56a03e5e7db5a22e3517fbb64a3f7e6f892b0269ab9d43d SHA512 9a8a0cce9bf7bd22280977af4b6bacf0e7b95b4dcf5862097b590ce4682470852721a14c8e8d250c672a538334d270ffddb3cdab98aa8ae9e5870ca1ddf11344 WHIRLPOOL 9c7cc47cb77a175e645d24ebd6b190b3cb84a6b889a377a5f95a2e8504913064c93bbade07051f966d69a95880f0d67ef9ce34f2b3c1767d0667048a3c40f3dd
+DIST powerpack-0.1.0.gem 14848 SHA256 5d5178e0e931f3e5a3c78f8cf5fd0141d00c4c06097c02391b0bdda67df1af84 SHA512 5c3c5fd4030c71cbe108d46197b29bf983e60f057f103da4e05c60350100716e10b19f68ae8d4746b9b4856ae7435d532ea2f27b7d8b0249a98473b5b7542af1 WHIRLPOOL f75f70d8c2091969400287545480d7809fb5013dc1086c16302f793310ddfd914fb0b6abc2bb5fcc69e1d05e9a7e36e756ff57d6363f79a62104b0e786e9875c
