@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*powerpack-0.1.0 (28 Jan 2015)
+
+  28 Jan 2015; Hans de Graaff <graaff@gentoo.org> +powerpack-0.1.0.ebuild:
+  Version bump.
+
 *powerpack-0.0.9 (24 Jan 2015)
 
   24 Jan 2015; Hans de Graaff <graaff@gentoo.org> +powerpack-0.0.9.ebuild,
